--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ h1 {
     background: white;
     box-shadow: 0px 0px 95px -30px black;
     border-radius: 12px;
-    padding: 10px 0;
+    padding: 10px;
     margin-bottom: 20px;
 }
 
@@ -80,7 +80,7 @@ h1 {
     background: white;
     box-shadow: 0px 0px 95px -30px black;
     border-radius: 12px;
-    padding: 10px 0;
+    padding: 10px;
     margin-bottom: 20px;
 }
 
@@ -139,25 +139,6 @@ button.calculate:hover {
     padding: 5px;
 }
 
-.footer {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 10px 15px;
-}
-
-.footer-text {
-    text-decoration: none;
-    color: rgb(250, 1, 1);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 200;
-    font-size: 14px;
-    transition: all 0.5;
-}
-
-.footer-text:hover {
-    color: wheat;
-}
 
 .gender {
     display: flex;
@@ -231,6 +212,7 @@ button.calculate:hover {
 }
 
 .modal {
+    cursor: default;
     display: none;
     position: fixed;
     z-index: 1;
@@ -240,8 +222,8 @@ button.calculate:hover {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: black;
-    background-color: rgb(0, 0, 0, 0.4);
+    background-color: rgb(3, 3, 3);
+    background-color: rgba(255, 0, 0, 0.4);
     padding-top: 300px;
 }
 
@@ -249,7 +231,7 @@ button.calculate:hover {
     background-color: white;
     margin: auto;
     padding: 20px;
-    border: 1px solid gray;
+    border: 1px solid rgb(253, 1, 1);
     width: 600px;
     border-radius: 10px;
     box-shadow: black;
@@ -259,7 +241,6 @@ button.calculate:hover {
     padding-top: 8px;
     padding-right: 5px;
     font-size: 18px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: black;
 }
 
@@ -299,4 +280,41 @@ button.calculate:hover {
     .modal-content {
         width: 380px;
     }
+}
+
+.social {
+    position: fixed;
+    top: 50%;
+    right: 0px;
+    transform: translateY(-50%);
+}
+
+.social a:hover {
+    background-color: #000000;
+    transition: all ease 0.5s;
+}
+
+.social a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    margin: 0px;
+    padding: 0px;
+    line-height: 0px;
+    background-color: #FFFFFF;
+    border: 1px solid #CBCBCB;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+}
+
+.social a:hover i {
+    color: #FFFFFF;
+    transition: all ease 0.5s;
+}
+
+.social i {
+    font-size: 20px;
+    color: #2B2B2B;
 }
