--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-image: linear-gradient(#468B97, #1D5B79);
+    background-image: linear-gradient(#001C30, #176B87);
 }
 
 .box {
