--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 body {
@@ -17,10 +17,10 @@ body {
 
 .box {
     width: 500px;
-    background: white;
+    background: #F5F5F5;
     border-radius: 12px;
     text-align: center;
-    box-shadow: 2px 2px 20px 5px black;
+    box-shadow: 2px 2px 20px 5px #562626;
 }
 
 h1 {
@@ -36,7 +36,7 @@ h1 {
 
 .input {
     background: white;
-    box-shadow: 0px 0px 95px -30px black;
+    box-shadow: 0px 0px 95px -30px #5C2E7E;
     border-radius: 12px;
     padding: 20px 0;
     margin-bottom: 20px;
@@ -44,7 +44,7 @@ h1 {
 
 .input label {
     display: block;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 600;
     color: black;
     margin-bottom: 20px;
@@ -62,7 +62,7 @@ h1 {
 
 .inputWeight {
     background: white;
-    box-shadow: 0px 0px 95px -30px black;
+    box-shadow: 0px 0px 95px -30px #5C2E7E;
     border-radius: 12px;
     padding: 10px;
     margin-bottom: 20px;
@@ -96,7 +96,7 @@ button.calculate {
     cursor: pointer;
     font-family: 'Courier New', Courier, monospace;
     color: white;
-    background: #9DC08B;
+    background: #54B435;
     font-size: 16px;
     border-radius: 7px;
     padding: 12px 0;
